helm/tdx-setup/gpu-cluster-policy.yaml
apiVersion: nvidia.com/v1
kind: ClusterPolicy
metadata:
  name: gpu-cluster-policy
spec:
  ccManager:
    defaultMode: "on"
    enabled: true
  cdi:
    default: false
    enabled: true
    nriPluginEnabled: false
  daemonsets:
    rollingUpdate:
      maxUnavailable: '1'
    updateStrategy: RollingUpdate
  dcgm:
    enabled: false
  dcgmExporter:
    config:
      name: ''
    enabled: false
    serviceMonitor:
      enabled: true
  devicePlugin:
    config:
      default: ''
      name: ''
    enabled: false
    mps:
      root: /run/nvidia/mps
  driver:
    certConfig:
      name: ''
    enabled: false
    kernelModuleConfig:
      name: ''
    kernelModuleType: auto
    licensingConfig:
      configMapName: ''
      nlsEnabled: true
    repoConfig:
      configMapName: ''
    upgradePolicy:
      autoUpgrade: true
      drain:
        deleteEmptyDir: false
        enable: false
        force: false
        timeoutSeconds: 300
      maxParallelUpgrades: 1
      maxUnavailable: 25%
      podDeletion:
        deleteEmptyDir: false
        force: false
        timeoutSeconds: 300
      waitForCompletion:
        timeoutSeconds: 0
    useNvidiaDriverCRD: false
    useOpenKernelModules: false
    virtualTopology:
      config: ''
  gdrcopy:
    enabled: false
  gds:
    enabled: false
  gfd:
    enabled: true
  kataManager:
    enabled: false
  mig:
    strategy: single
  migManager:
    enabled: false
  nodeStatusExporter:
    enabled: true
  operator:
    defaultRuntime: crio
    initContainer: {}
    runtimeClass: nvidia
    use_ocp_driver_toolkit: true
  kataSandboxDevicePlugin:
    enabled: true
    env:
      - name: P_GPU_ALIAS
        value: pgpu
      - name: NVSWITCH_ALIAS
        value: nvswitch
  sandboxWorkloads:
    defaultWorkload: vm-passthrough
    enabled: true
    mode: kata
  toolkit:
    enabled: false
    installDir: /usr/local/nvidia
  validator:
    plugin:
      env:
        - name: WITH_WORKLOAD
          value: 'false'
  vfioManager:
    enabled: true
    env:
      - name: BIND_NVSWITCHES
        value: 'true'
  vgpuDeviceManager:
    enabled: false
  vgpuManager:
    enabled: false
